<resources>
    <string name="app_name">ATTENDANCE</string>
    <string name="admin">ADMIN</string>
    <string name="faculty">FACULTY</string>
    <string name="student">STUDENT</string>
    <string name="attendance_system">ATTENDANCE SYSTEM</string>
    <string name="title_activity_admin_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="admin_login">Admin Login</string>
    <string name="admin1">Admin ID</string>
    <string name="AdminLogin">LOGIN</string>
    <string name="AdminPassword">Password</string>
    <string name="faculty_login">Faculty Login</string>
    <string name="faculty_password">Password</string>
    <string name="faculty_login1">LOGIN</string>
    <string name="faculty1">Faculty ID</string>
    <string name="student_login">STUDENT LOGIN</string>
    <string name="student_id1">Student ID</string>
    <string name="student_password">Password</string>
    <string name="student_login1">LOGIN</string>
    <string name="title_activity_admin">Admin</string>

</resources>
