<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AdminLoginActivity">

<TextView
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="37dp"
    android:text="@string/admin_login"
    android:textAlignment="center"
    android:textSize="30sp"
    tools:layout_editor_absoluteX="163dp"
    tools:layout_editor_absoluteY="42dp" />

<EditText
    android:id="@+id/AdminId"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="0dp"
    android:layout_marginTop="142dp"
    android:layout_marginEnd="0dp"
    android:ems="10"
    android:hint="@string/admin1"
    android:inputType="textPersonName" />

<EditText
    android:id="@+id/editText2"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="0dp"
    android:layout_marginTop="209dp"
    android:layout_marginEnd="0dp"
    android:ems="10"
    android:hint="@string/AdminPassword"
    android:inputType="textPassword" />

<Button
    android:id="@+id/button4"
    android:layout_width="wrap_content"
    android:layout_height="58dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="114dp"
    android:layout_marginTop="291dp"
    android:layout_marginEnd="112dp"
    android:textColor="#006699"
    android:text="@string/AdminLogin"
    android:textSize="20sp" />
</RelativeLayout>