<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/faculty_login"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="42dp" />

    <EditText
        android:id="@+id/Facultyemail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="Faculty E-mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/Facultyemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/faculty_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_below="@+id/facultytype1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="110dp"
        android:text="@string/faculty_login1"
        android:textColor="#006699"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/facultytype1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="TYPE"
        android:inputType="textCapCharacters|textPersonName" />
</RelativeLayout>