<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/student_login"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="42dp" />

    <EditText
        android:id="@+id/StudentEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="Student Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/student_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_below="@+id/studenttypec"
        android:layout_alignBottom="@+id/studenttypec"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="-151dp"
        android:text="@string/student_login1"
        android:textColor="#006699"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/studenttypec"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="TYPE"
        android:inputType="textCapCharacters" />
</RelativeLayout>